Simplifying code leveraging java 21